--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="pt-Br">
+<head>
+    < meta charset="UFT-8">
+    < meta charset="viewport" content="width=device-width, initial-scale=1.0">
 
+
+
+
+  <div class="game-board">
+  <img src="/img/clouds.png" class="nuvem">
+  <img scr="img/mario.gif" class="mario">
+  <img src="/img/pipe.png" class="pipe">
